--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
-      "@/app/*": ["app/*"]
-    },
-    "baseUrl": "."
+      "@/*": ["src/*"]
+    }
   }
 }
