--- a/package.json
+++ b/package.json
@@ -10,23 +10,23 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.4",
+    "@next/font": "^14.2.5",
     "@tailwindcss/forms": "^0.5.7",
     "@vercel/postgres": "^0.9.0",
-    "autoprefixer": "10.4.19",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.19",
-    "postcss": "8.4.38",
     "react": "^18",
     "react-dom": "^18",
-    "tailwindcss": "3.4.4",
     "typescript": "5.5.2",
     "use-debounce": "^10.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "@types/react": "18.3.3",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.7"
   }
 }
