--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.4",
+    "@heroicons/react": "^2.1.5",
     "@next/font": "^14.2.5",
     "@tailwindcss/forms": "^0.5.7",
     "@vercel/postgres": "^0.9.0",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
-    "next": "14.2.5",
+    "next": "^14.2.5",
     "next-auth": "5.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18",
